[project]
name = "dungeon-crawler"
version = "0.1.0"
description = "RAG-powered DND dungeon crawl CLI game"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Evan McCormick", email = "e.kidmccorm@gmail.com" }
]
keywords = ["dnd", "game", "cli", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # LLM
    "ollama>=0.3.0",
    
    # Embeddings
    "sentence-transformers>=3.0.0",
    
    # Storage
    "lancedb>=0.9.0",
    "pyarrow>=15.0.0",
    "networkx>=3.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "nuitka>=2.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dungeon-crawler"
Documentation = "https://github.com/yourusername/dungeon-crawler#readme"
Repository = "https://github.com/yourusername/dungeon-crawler"
Issues = "https://github.com/yourusername/dungeon-crawler/issues"